# MDSetup

./: .gitignore  README.md  SimulationSetup.ipynb  build_package.sh  example.ipynb  new_example.ipynb  pyproject.toml  setup.py  test.ipynb
.github/workflows/: test_and_doc.yml
MDSetup/: __init__.py  butane.mol  hexane.mol  module_gromacs_setup.py  module_lammps_setup.py  module_md_setup.py  test.ipynb
MDSetup/analysis/: __init__.py  general_analysis.py  mechanical_properties.py  reader.py  solvation_free_energy.py  visualize.py
MDSetup/base/: base.py
MDSetup/forcefield/: __init__.py  converter.py  convertfunctions.py  forcefield.py  gromacs.py  lammps.py  molecule.py  playmol.py  reader.py  utils.py  writer.py
MDSetup/setup/: gromacs.py  lammps.py
MDSetup/tools/: general.py  molecule.py  systemsetup.py
docs/: index.html  pyLAMMPS.html  search.js
docs/MDSetup/: index.md  module_md_setup.md
docs/pyLAMMPS/: analysis.html  module_lammps_input.html  module_lammps_setup.html  tools.html
docs/pyLMP/: index.md  module_lammps_setup.md
force-fields/: TAMie_hydrocarbons_gromacs.toml  TAMie_hydrocarbons_lammps.toml  forcefield_UA_TAMie_alkanes.toml
input/: defaults.yaml  sampling.yaml  setup.yaml
pyLAMMPS/: __init__.py  module_lammps_input.py  utils.py
pyLAMMPS.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
pyLAMMPS/tools/: __init__.py  (+7 more)
pyLMP/: module_lammps_setup.py
templates/: template_lammps_ff.params  template_lammps_free_energy.input  template_lammps_input.in  template_mechanical.in  template_playmol_input.mol
(+219 files in other folders)
