[tool.poetry]
name = "pyLMP"
version = "0.0.1"
description = ""
authors = ["Samir Darouich <samir.darouich@itt.uni-stuttgart.de>"]
readme = "README.md"
packages = [{include = "pyLMP"}]
repository = "https://github.com/samirdarouich/pyLMP.git"
documentation = "https://samirdarouich.github.io/pyLMP"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
pandas = "^2.1.4"
seaborn = "^0.13.2"
scipy = "^1.13.0"
toml = "^0.10.2"
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
rdkit = "^2023.9.6"
Pubchempy = "^1.0.4"
alchemlyb = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"