[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdsetup"
version = "0.0.1"
description = "This tool allows to setup and analyze molecular dynamic (MD) simulations for LAMMPS and GROMACS"
authors = [
    { name = "Samir Darouich" },
]
readme = "README.md"
license = { file="LICENSE" }

requires-python =  ">=3.9"
dependencies = [
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "seaborn>=0.13.2",
    "scipy>=1.13.0",
    "toml>=0.10.2",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "rdkit>=2023.9.6",
    "Pubchempy>=1.0.4",
    "alchemlyb>=2.2.0",
    "moleculegraph @ git+https://github.com/maxfleck/moleculegraph.git",
]


[tool.setuptools]
package-dir = { "" = "src" }
script-files = [
    "src/scripts/select_frames_us",
]

[tool.setuptools.packages.find]
where = ["src"]
